# holmesgpt

./: .coderabbit.yaml  .evals  404.html  BashToolsetSpec.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  KIND_SETUP.md  OPTION3_SECURITY_GUARANTEE.md  OPTION3_VERIFICATION.md  PERFORMANCE_DIAGNOSTIC_GUIDE.md  README.md  SECURITY_AUDIT.md  SECURITY_IMPROVEMENTS_SUMMARY.md  autoevals.py  conftest.py  datasource-catalog.json  docker-compose.yaml  evals_per_branch.json  index.html  kind-setup.sh  mkdocs.yml  netlify.toml  plan.md  pyproject.toml  pytest_shared_session_scope.py  run_benchmarks_local.py  server.py  sitemap.xml  versions.json
0.19.1/: 404.html  index.html  sitemap.xml
0.20.0/: 404.html  index.html  sitemap.xml
0.21.0/: 404.html  index.html  sitemap.xml
ai-providers/: index.html
alertmanager/: .gitignore  Dockerfile  Makefile  README.md  deployment.yaml  docker-compose.yaml  pyproject.toml
alertmanager/app/: __init__.py  config.py  holmes_client.py  main.py  models.py  storage.py
alertmanager/examples/: alerts.yml  prometheus.yml  smoke-test.sh
alertmanager/tests/: __init__.py  test_api.py  test_conformance.py  test_holmes_client.py  test_integration.py  test_storage.py
braintrust/: __init__.py  oai.py
community/: index.html
data-sources/: index.html
dev/: 404.html  index.html  sitemap.xml
development/: index.html
docs/: why-holmesgpt.md
examples/: custom_llm.py
holmes/: __init__.py  config.py  init_wizard.py  interactive.py  main.py  version.py
operator/: index.html
tests/: conftest.py  generate_eval_report.py  test_interactive.py  (+22 more)
(+1290 files in other folders)
